--- a/index.html
+++ b/index.html
@@ -41,19 +41,21 @@
             <div class="item fade-in">
                 <h3>作品集1</h3>
                 <div class="video-wrapper">
-                    <video src="video/showreel_03.mp4" controls muted autoplay loop playsinline></video>
+                    <video controls preload="none" poster="img/cover.png" loading="lazy" width="100%">
+                        <source src="video/showreel_03.mp4" type="video/mp4" />
+                        您的浏览器不支持视频播放。
+                    </video>
+                </div>
+                <!-- Tags -->
+                <div class="tags">
+                    <span>Houdini</span>
+                    <span>粒子</span>
+                    <span>Redshift</span>
+                    <span>破碎</span>
+                    <span>烟火</span>
+                    <span>Karma</span>
                 </div>
             </div>
-            <!-- Tags -->
-            <div class="tags">
-                <span>Houdini</span>
-                <span>粒子</span>
-                <span>Redshift</span>
-                <span>破碎</span>
-                <span>烟火</span>
-                <span>Karma</span>
-            </div>
-        </div>
     </section>
 
 
@@ -133,25 +135,25 @@
 
     // 锚点回到顶部
     document.addEventListener("DOMContentLoaded", function () {
-  const backToTop = document.getElementById("backToTop");
+        const backToTop = document.getElementById("backToTop");
 
-  // 监听滚动显示按钮
-  window.addEventListener("scroll", function () {
-    if (window.scrollY > 200) {
-      backToTop.style.display = "block";
-    } else {
-      backToTop.style.display = "none";
-    }
-  });
+        // 监听滚动显示按钮
+        window.addEventListener("scroll", function () {
+            if (window.scrollY > 200) {
+                backToTop.style.display = "block";
+            } else {
+                backToTop.style.display = "none";
+            }
+        });
 
-  // 点击滚动到顶部
-  backToTop.addEventListener("click", function () {
-    window.scrollTo({
-      top: 0,
-      behavior: "smooth"
+        // 点击滚动到顶部
+        backToTop.addEventListener("click", function () {
+            window.scrollTo({
+                top: 0,
+                behavior: "smooth"
+            });
+        });
     });
-  });
-});
 
 
     // 页面加载动画
