--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <!-- ✅ SEO 关键标签 -->
     <title>Ceng's - 特效作品集</title>
     <meta name="description" content="特效师作品集：展示 Houdini、粒子、爆炸、烟雾等项目，支持视频播放与技能图谱。">
     <meta name="keywords" content="VFX, Houdini, 特效作品集, 粒子模拟, Redshift, Nuke, Maya">
     <meta name="author" content="Ceng's" />
-    
+
     <meta name="theme-color" content="#4fa3ff" />
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="favator_1.png" type="image/x-icon">
@@ -42,6 +43,7 @@
         <div class="projects">
             <div class="item fade-in">
                 <h3>作品集1</h3>
+                <p class="video_1_description">以下作品集结合了 Houdini 和 Redshift 的技术，展示了粒子特效和破碎效果烟雾等效果。</p>
                 <div class="video-wrapper">
                     <video controls preload="none" poster="img/cover.png" loading="lazy" width="100%">
                         <source src="video/showreel_03.mp4" type="video/mp4" />
@@ -56,8 +58,10 @@
                     <span>破碎</span>
                     <span>烟火</span>
                     <span>Karma</span>
+                    <span>作品集</span>
                 </div>
             </div>
+            
     </section>
 
 
@@ -112,7 +116,12 @@
         <p>© 2025 Ceng's | <a href="resume.pdf" download>📄 下载简历</a></p>
     </footer>
 
-    <button id="backToTop" title="返回顶部">↑</button>
+    <button id="backToTop" title="返回顶部">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <path d="M12 4L4 12h5v8h6v-8h5L12 4z" fill="white" />
+        </svg>
+    </button>
+
 </body>
 
 
