--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <!-- ✅ SEO 关键标签 -->
+    <!-- SEO 关键标签 -->
     <title>Ceng's - 特效作品集</title>
     <meta name="description" content="特效师作品集：展示 Houdini、粒子、爆炸、烟雾等项目，支持视频播放与技能图谱。">
     <meta name="keywords" content="VFX, Houdini, 特效作品集, 粒子模拟, Redshift, Nuke, Maya">
@@ -26,10 +26,12 @@
     </div>
 
     <button id="themeToggle" title="切换主题">🌙</button>
+
     <header>
         <h1>张三丰大特笑师</h1>
         <p class="typing">特效是一种思维，也是一种美感</p>
     </header>
+
 
     <section id="projects">
         <h2>
@@ -79,7 +81,7 @@
         <ul class="skills">
             <li>
                 <span class="skill-name">Houdini</span>
-                <div class="skill-bar"><span style="width: 60%;"></span></div>
+                <div class="skill-bar" ><span style="width: 60%;"></span></div>
             </li>
             <li>
                 <span class="skill-name">Nuke</span>
@@ -184,9 +186,6 @@
             loader.style.display = "none"; // 之后快速跳过
         }
     });
-
-
-
 
 </script>
 
