--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h3>作品集1</h3>
                 <p class="video_1_description">以下作品集结合了 Houdini 和 Redshift 的技术，展示了粒子特效和破碎效果烟雾等效果。</p>
                 <div class="video-wrapper">
-                    <video controls preload="none" poster="img/cover.png" loading="lazy" width="100%">
+                    <video controls preload="none" poster="imgs/cover.png" loading="lazy" width="100%">
                         <source src="video/showreel_03_low.mp4" type="video/mp4" />
                         您的浏览器不支持视频播放。
                     </video>
